# peco-outage-api

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  upload.sh
.github/workflows/: test.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/peco/: __init__.py  const.py  peco.py
src/peco-outage-api/: const.py
src/peco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
