[metadata]
name = peco
version = 0.0.28
author = IceBotYT
author_email = icebotyt@outlook.com
description = Wrapper for PECO Outage API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IceBotYT/peco-outage-api
project_urls = 
    Bug Tracker = https://github.com/IceBotYT/peco-outage-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp>=3.8.1
    pydantic>=1.9.0

[options.packages.find]
where = src